Add Haster ability with special configuration